<resources>
    <string name="app_name">Salat Helper</string>
    <string name="number_of_rukuu">0</string>
    <string name="rukuu_photo_description">Photo of person doing Rukuu</string>
    <string name="sensor_value_label">Sensor reading: </string>
    <string name="sensor_value_default">0</string>
    <string name="reset_button">Reset</string>
    <string name="manual_mode_active">You are using the manual mode</string>
    <string name="light_sensor_mode_active">You are using the light sensor</string>
    <string name="proximity_sensor_mode_active">You are using the proximity sensor</string>
    <string name="manual_mode_description">Manual Mode requires you to manually register a sajda. On the next page, you will see a blue box. Simply tap anywhere inside the blue box with your finger to register the sajda.</string>
    <string name="light_mode_description">The light sensor mode automatically detects your sajda gesture. It uses changes in light intensity to recognize the gesture. To use this mode effectively, place the phone beneath you as you bend forward for the sajda, ensuring that the phone is hidden by your shadow. Please note that this mode may have some limitations, especially if the light comes from all directions or if the room is either too bright or too dim.</string>
    <string name="proximity_mode_description">The proximity sensor mode automatically detects your sajda gesture. It uses the distance between you and your phone to recognize the gesture. Please note that in most devices, the proximity sensor detects objects within a range of approximately 5 cm from the phone. To use this mode effectively, place the phone beneath you as you bend forward for the sajda, ensuring that your nose is almost touching the screen. Being in close proximity to the phone is necessary for it to work properly.</string>
    <string name="manual_mode_title">Manual Mode</string>
    <string name="light_mode_title">Automatic Light Sensor Mode</string>
    <string name="light_mode_title_disabled">Automatic Light Sensor Mode (You can\'t use this mode on your phone)</string>
    <string name="proximity_mode_title">Automatic Proximity Sensor Mode</string>
    <string name="proximity_mode_title_disabled">Automatic Proximity Sensor Mode (You can\'t use this mode on your phone)</string>
    <string name="no_mode_chosen">You have not chosen a mode yet.</string>
    <string name="proceed_mode">Proceed</string>
    <string name="mode_placeholder">""</string>
    <string name="sujud_image_description">Sujud image</string>
    <string name="arrow_image_description">arrow that represents a sajda</string>
    <string name="select_mode_menu_item">Select mode</string>
    <string name="focus_mode_button">Coming soon!</string>
    <string name="focus_mode_tooltip">Focus Mode</string>
    <string name="aqsa_photo">photo of al Aqsa mosque</string>
    <string name="flag_of_palestine">flag of palestine</string>
</resources>
